--- a/langgraph-tutorial/.env.example
+++ b/langgraph-tutorial/.env.example
@@ -1,10 +1,7 @@
-# AWS Configuration
-AWS_ACCESS_KEY_ID=your_access_key_here
-AWS_SECRET_ACCESS_KEY=your_secret_key_here
-AWS_REGION=us-east-1
-
-# Optional: Override default ports
-# CHROMA_PORT=8000
+BEDROCK_AWS_REGION=us-east-1
+AWS_BEARER_TOKEN_BEDROCK=
+BEDROCK_MODEL_ID=
+BEDROCK_EMBEDDINGS_MODEL_ID=
 # APP_PORT=3000
 
 # Development settings
