--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
-node_modules
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+dist/
+build/
+
+# Logs
+*.log
+
+# ChromaDB embedded database
+exercise-2-data-engineering/chroma_db/
+
+# Generated files
+exercise-1-data-science/data-science-output.json
+exercise-2-data-engineering/pipeline-report.json
+exercise-3-app-development/vector-db-config.json
+
+# OS files
+.DS_Store
+Thumbs.db
