Display relevant source only

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 BEDROCK_AWS_REGION=us-east-1
 AWS_BEARER_TOKEN_BEDROCK=
-BEDROCK_MODEL_ID=
-BEDROCK_EMBEDDINGS_MODEL_ID=
+BEDROCK_MODEL_ID=anthropic.claude-3-5-sonnet-20240620-v1:0
+BEDROCK_EMBEDDINGS_MODEL_ID=amazon.titan-embed-text-v2:0
 # APP_PORT=3000
 
 # Development settings
